// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useColorPalette should return the expected palette including transparent 1`] = `
Object {
  "current": Object {
    "colorPalette": Array [
      Object {
        "color": "transparent",
        "label": "Transparent",
      },
      Object {
        "color": "#fff",
        "label": "White",
      },
      Object {
        "color": "#f44336",
        "label": "Red",
        "shades": Array [
          "#fcd0cc",
          "#f9a19a",
          "#f67268",
          "#f44336",
          "#be342a",
          "#88251e",
          "#521612",
        ],
      },
      Object {
        "color": "#e91e63",
        "label": "Pink",
        "shades": Array [
          "#f9c6d8",
          "#f48eb1",
          "#ee568a",
          "#e91e63",
          "#b5174d",
          "#821037",
          "#4f0a21",
        ],
      },
      Object {
        "color": "#9c27b0",
        "label": "Purple",
        "shades": Array [
          "#e6c9eb",
          "#cd93d7",
          "#b45dc3",
          "#9c27b0",
          "#791e89",
          "#571562",
          "#350d3b",
        ],
      },
      Object {
        "color": "#673ab7",
        "label": "Deep purple",
        "shades": Array [
          "#d9cded",
          "#b39cdb",
          "#8d6bc9",
          "#673ab7",
          "#502d8e",
          "#392066",
          "#23133e",
        ],
      },
      Object {
        "color": "#3f51b5",
        "label": "Indigo",
        "shades": Array [
          "#cfd3ec",
          "#9fa8da",
          "#6f7cc7",
          "#3f51b5",
          "#313f8d",
          "#232d65",
          "#151b3d",
        ],
      },
      Object {
        "color": "#2196f3",
        "label": "Blue",
        "shades": Array [
          "#c7e4fc",
          "#90caf9",
          "#58b0f6",
          "#2196f3",
          "#1975bd",
          "#125488",
          "#0b3252",
        ],
      },
      Object {
        "color": "#03a9f4",
        "label": "Light blue",
        "shades": Array [
          "#c0e9fc",
          "#81d4f9",
          "#42bef6",
          "#03a9f4",
          "#0283be",
          "#015e88",
          "#013952",
        ],
      },
      Object {
        "color": "#00bcd4",
        "label": "Cyan",
        "shades": Array [
          "#bfeef4",
          "#7fdde9",
          "#3fccde",
          "#00bcd4",
          "#0092a5",
          "#006976",
          "#003f48",
        ],
      },
      Object {
        "color": "#009688",
        "label": "Teal",
        "shades": Array [
          "#bfe4e1",
          "#7fcac3",
          "#3fb0a5",
          "#009688",
          "#00756a",
          "#00544c",
          "#00322e",
        ],
      },
      Object {
        "color": "#4caf50",
        "label": "Green",
        "shades": Array [
          "#d2ebd3",
          "#a5d7a7",
          "#78c37b",
          "#4caf50",
          "#3b883e",
          "#2a622c",
          "#193b1b",
        ],
      },
      Object {
        "color": "#8bc34a",
        "label": "Light green",
        "shades": Array [
          "#e2f0d1",
          "#c5e1a4",
          "#a8d277",
          "#8bc34a",
          "#6c9839",
          "#4d6d29",
          "#2f4219",
        ],
      },
      Object {
        "color": "#cddc39",
        "label": "Lime",
        "shades": Array [
          "#f2f6cd",
          "#e6ed9c",
          "#d9e46a",
          "#cddc39",
          "#9fab2c",
          "#727b1f",
          "#454a13",
        ],
      },
      Object {
        "color": "#ffeb3b",
        "label": "Yellow",
        "shades": Array [
          "#ffface",
          "#fff59d",
          "#fff06c",
          "#ffeb3b",
          "#c6b72e",
          "#8e8321",
          "#564f14",
        ],
      },
      Object {
        "color": "#ffc107",
        "label": "Amber",
        "shades": Array [
          "#ffefc1",
          "#ffe083",
          "#ffd045",
          "#ffc107",
          "#c69605",
          "#8e6c03",
          "#564102",
        ],
      },
      Object {
        "color": "#ff9800",
        "label": "Orange",
        "shades": Array [
          "#ffe5bf",
          "#ffcb7f",
          "#ffb13f",
          "#ff9800",
          "#c67600",
          "#8e5500",
          "#563300",
        ],
      },
      Object {
        "color": "#ff5722",
        "label": "Deep orange",
        "shades": Array [
          "#ffd5c7",
          "#ffab90",
          "#ff8159",
          "#ff5722",
          "#c6431a",
          "#8e3013",
          "#561d0b",
        ],
      },
      Object {
        "color": "#795548",
        "label": "Brown",
        "shades": Array [
          "#ddd4d1",
          "#bcaaa3",
          "#9a7f75",
          "#795548",
          "#5e4238",
          "#432f28",
          "#291c18",
        ],
      },
      Object {
        "color": "#9e9e9e",
        "label": "Grey",
        "shades": Array [
          "#e6e6e6",
          "#cecece",
          "#b6b6b6",
          "#9e9e9e",
          "#7b7b7b",
          "#585858",
          "#353535",
        ],
      },
      Object {
        "color": "#607d8b",
        "label": "Blue grey",
        "shades": Array [
          "#d7dee2",
          "#afbec5",
          "#879da8",
          "#607d8b",
          "#4a616c",
          "#35464d",
          "#202a2f",
        ],
      },
      Object {
        "color": "#000",
        "label": "Black",
      },
    ],
    "defaultColor": "#9e9e9e",
    "defaultShade": 3,
    "defaultShapeColor": "#ffefc1",
    "defaultShapeShade": 0,
    "defaultTextColor": undefined,
    "defaultTextShade": 3,
    "fallbackColor": Object {
      "color": "#9e9e9e",
      "label": "Grey",
      "shades": Array [
        "#e6e6e6",
        "#cecece",
        "#b6b6b6",
        "#9e9e9e",
        "#7b7b7b",
        "#585858",
        "#353535",
      ],
    },
  },
}
`;

exports[`useColorPalette should return the expected palette without transparent 1`] = `
Object {
  "current": Object {
    "colorPalette": Array [
      Object {
        "color": "#fff",
        "label": "White",
      },
      Object {
        "color": "#f44336",
        "label": "Red",
        "shades": Array [
          "#fcd0cc",
          "#f9a19a",
          "#f67268",
          "#f44336",
          "#be342a",
          "#88251e",
          "#521612",
        ],
      },
      Object {
        "color": "#e91e63",
        "label": "Pink",
        "shades": Array [
          "#f9c6d8",
          "#f48eb1",
          "#ee568a",
          "#e91e63",
          "#b5174d",
          "#821037",
          "#4f0a21",
        ],
      },
      Object {
        "color": "#9c27b0",
        "label": "Purple",
        "shades": Array [
          "#e6c9eb",
          "#cd93d7",
          "#b45dc3",
          "#9c27b0",
          "#791e89",
          "#571562",
          "#350d3b",
        ],
      },
      Object {
        "color": "#673ab7",
        "label": "Deep purple",
        "shades": Array [
          "#d9cded",
          "#b39cdb",
          "#8d6bc9",
          "#673ab7",
          "#502d8e",
          "#392066",
          "#23133e",
        ],
      },
      Object {
        "color": "#3f51b5",
        "label": "Indigo",
        "shades": Array [
          "#cfd3ec",
          "#9fa8da",
          "#6f7cc7",
          "#3f51b5",
          "#313f8d",
          "#232d65",
          "#151b3d",
        ],
      },
      Object {
        "color": "#2196f3",
        "label": "Blue",
        "shades": Array [
          "#c7e4fc",
          "#90caf9",
          "#58b0f6",
          "#2196f3",
          "#1975bd",
          "#125488",
          "#0b3252",
        ],
      },
      Object {
        "color": "#03a9f4",
        "label": "Light blue",
        "shades": Array [
          "#c0e9fc",
          "#81d4f9",
          "#42bef6",
          "#03a9f4",
          "#0283be",
          "#015e88",
          "#013952",
        ],
      },
      Object {
        "color": "#00bcd4",
        "label": "Cyan",
        "shades": Array [
          "#bfeef4",
          "#7fdde9",
          "#3fccde",
          "#00bcd4",
          "#0092a5",
          "#006976",
          "#003f48",
        ],
      },
      Object {
        "color": "#009688",
        "label": "Teal",
        "shades": Array [
          "#bfe4e1",
          "#7fcac3",
          "#3fb0a5",
          "#009688",
          "#00756a",
          "#00544c",
          "#00322e",
        ],
      },
      Object {
        "color": "#4caf50",
        "label": "Green",
        "shades": Array [
          "#d2ebd3",
          "#a5d7a7",
          "#78c37b",
          "#4caf50",
          "#3b883e",
          "#2a622c",
          "#193b1b",
        ],
      },
      Object {
        "color": "#8bc34a",
        "label": "Light green",
        "shades": Array [
          "#e2f0d1",
          "#c5e1a4",
          "#a8d277",
          "#8bc34a",
          "#6c9839",
          "#4d6d29",
          "#2f4219",
        ],
      },
      Object {
        "color": "#cddc39",
        "label": "Lime",
        "shades": Array [
          "#f2f6cd",
          "#e6ed9c",
          "#d9e46a",
          "#cddc39",
          "#9fab2c",
          "#727b1f",
          "#454a13",
        ],
      },
      Object {
        "color": "#ffeb3b",
        "label": "Yellow",
        "shades": Array [
          "#ffface",
          "#fff59d",
          "#fff06c",
          "#ffeb3b",
          "#c6b72e",
          "#8e8321",
          "#564f14",
        ],
      },
      Object {
        "color": "#ffc107",
        "label": "Amber",
        "shades": Array [
          "#ffefc1",
          "#ffe083",
          "#ffd045",
          "#ffc107",
          "#c69605",
          "#8e6c03",
          "#564102",
        ],
      },
      Object {
        "color": "#ff9800",
        "label": "Orange",
        "shades": Array [
          "#ffe5bf",
          "#ffcb7f",
          "#ffb13f",
          "#ff9800",
          "#c67600",
          "#8e5500",
          "#563300",
        ],
      },
      Object {
        "color": "#ff5722",
        "label": "Deep orange",
        "shades": Array [
          "#ffd5c7",
          "#ffab90",
          "#ff8159",
          "#ff5722",
          "#c6431a",
          "#8e3013",
          "#561d0b",
        ],
      },
      Object {
        "color": "#795548",
        "label": "Brown",
        "shades": Array [
          "#ddd4d1",
          "#bcaaa3",
          "#9a7f75",
          "#795548",
          "#5e4238",
          "#432f28",
          "#291c18",
        ],
      },
      Object {
        "color": "#9e9e9e",
        "label": "Grey",
        "shades": Array [
          "#e6e6e6",
          "#cecece",
          "#b6b6b6",
          "#9e9e9e",
          "#7b7b7b",
          "#585858",
          "#353535",
        ],
      },
      Object {
        "color": "#607d8b",
        "label": "Blue grey",
        "shades": Array [
          "#d7dee2",
          "#afbec5",
          "#879da8",
          "#607d8b",
          "#4a616c",
          "#35464d",
          "#202a2f",
        ],
      },
      Object {
        "color": "#000",
        "label": "Black",
      },
    ],
    "defaultColor": "#9e9e9e",
    "defaultShade": 3,
    "defaultShapeColor": "#ffefc1",
    "defaultShapeShade": 0,
    "defaultTextColor": undefined,
    "defaultTextShade": 3,
    "fallbackColor": Object {
      "color": "#9e9e9e",
      "label": "Grey",
      "shades": Array [
        "#e6e6e6",
        "#cecece",
        "#b6b6b6",
        "#9e9e9e",
        "#7b7b7b",
        "#585858",
        "#353535",
      ],
    },
  },
}
`;
